--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: frankfurt
     plan: starter
     buildCommand: bundle install && bundle exec rails assets:precompile
-    startCommand: bundle exec rails db:migrate && bundle exec rails db:seed && bundle exec rails server -p $PORT -e production
+    startCommand: bundle exec rails server -p $PORT -e production
     envVars:
       - key: RAILS_ENV
         value: production
